--- a/app/elements/coder/challenge/result/contest-result.html
+++ b/app/elements/coder/challenge/result/contest-result.html
@@ -1,5 +1,8 @@
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="/elements/common/leaderboard/challenge-leaderboard.html">
+<link rel="import" href="/elements/common/services/result-service.html">
+<link rel="import" href="/elements/common/description-list/description-list.html">
+<link rel="import" href="/elements/common/description-list/description-list-item.html">
 
 <dom-module id="contest-result">
 	<style include="iron-flex">
@@ -35,17 +38,17 @@
 		paper-material{
 			display: inline-block;
 		}
+
+		table, th, td {
+			border: 1px solid black;
+			border-collapse: collapse;
+		}
+		th, td {
+			padding: 5px;
+		}
 	</style>
 	<template>
-		<iron-ajax
-			id="getMyResult"
-			auto
-			method="GET"
-			handle-as="json"
-			with-credentials="true"
-			last-response="{{result}}"
-			on-error="_onError">
-		</iron-ajax>
+		<result-service id="resultService" result="{{result}}"></result-service>
 
 		<paper-material id="topLeftCard" class="card squareCard">
 			<h3>Leaderboard</h3>
@@ -56,19 +59,47 @@
 		</paper-material>
 		<paper-material id="botLeftCard" class="card squareCard">
 			<h3>My result</h3>
+			<description-list>
+				<description-list-item label="Start time" value="{{result.started}}" date></description-list-item>
+				<description-list-item label="End time" value="{{result.finished}}" date></description-list-item>
+			</description-list>
+			<table style="width:100%">
+				<tr>
+					<th>Task</th>
+					<th>Start time</th>
+					<th>End time</th>
+					<th>Successful</th>
+					<th>Nr of submissions</th>
+				</tr>
+				<template is="dom-repeat" items="{{result.taskResults}}">
+					<tr>
+						<td>{{item.task.name}}</td>
+						<td>{{_formatDate(item.startTime)}}</td>
+						<td>{{_formatDate(item.endTime)}}</td>
+						<td>{{item.successful}}</td>
+						<td>{{item.nrOfSubmissions}}</td>
+					</tr>
+				</template>
+			</table>
 		</paper-material>
 		<paper-material id="botRightCard" class="card squareCard">
 			<h3>Other</h3>
 		</paper-material>
 	</template>
+	<script type="application/javascript" src="/scripts/behaviors/datetime-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'contest-result',
+			behaviors: [Behaviors.DateTimeBehavior],
 			properties: {
 				challengeId: {
 					type: String,
-					notify: true
+					notify: true,
+					observer: '_challengeIdLoaded'
 				}
+			},
+			_challengeIdLoaded: function(){
+				this.$.resultService.getMyResultByChallengeId(this.challengeId);
 			}
 		});
 	</script>
