--- a/app/elements/coder/input-view/input-view.html
+++ b/app/elements/coder/input-view/input-view.html
@@ -70,6 +70,9 @@
 				this.fire('all-green');
 			},
 			runTests: function(){
+				for (var i = 0; i < this.tests.length; i++){
+					this.$$('#' + this._inputId(this.tests[i].id)).startLoading();
+				}
 				this.$.userSubmissionService.submitOutput(this.task.id, this.testOutputs);
 			},
 			setResult: function(result){
@@ -82,8 +85,8 @@
 				}
 				this.testStats[result.test] = result.successful;
 				this._testAllGreen();
-				var testInput = this.$$('#' + this._inputId(result.testId));
-				testInput.testResult = result.successful;
+				var testInput = this.$$('#' + this._inputId(result.test));
+				testInput.setResult(result.successful);
 			},
 			_afterPropertiesSet: function(){
 				this.testOutputs = [];
