fix input disabled

--- a/app/elements/coder/input-view/input-view-element.html
+++ b/app/elements/coder/input-view/input-view-element.html
@@ -74,6 +74,7 @@
 				this.inputStyle = 'border-color: #86C67C;';
 			},
 			red: function(){
+				this.enable();
 				this.inputStyle = 'border-color: #CD4F39;';
 			},
 			addInputFile: function(){
