display correct values in contest-result and template-form

--- a/app/elements/coder/challenge/result/contest-result.html
+++ b/app/elements/coder/challenge/result/contest-result.html
@@ -77,7 +77,7 @@
 						<td>{{_formatDate(item.startTime)}}</td>
 						<td>{{_formatDate(item.endTime)}}</td>
 						<td>{{item.successful}}</td>
-						<td>{{item.nrOfSubmissions}}</td>
+						<td>{{item.numberOfSubmissions}}</td>
 					</tr>
 				</template>
 			</table>
