--- a/app/elements/coder/code-editor/code-editor-with-actions.html
+++ b/app/elements/coder/code-editor/code-editor-with-actions.html
@@ -113,6 +113,7 @@
 			},
 			_languageChanged: function(){
 				if(this.language){
+					this._setValue('');
 					var cachedCode = this._getCachedCode();
 					if(cachedCode){
 						this._setValue(cachedCode);
